--- a/index.html
+++ b/index.html
@@ -22,18 +22,61 @@
         </form>
     </header>
     <main class="main">
-            <form action="" id="evaluation-form">
+        <form action="" id="evaluation-form">
+            <div>
                 <input type="text" id="input-name" placeholder="Nome">
                 <input type="text" id="input-lastname" placeholder="Sobrenome">
+            </div>
+            <div>
                 <input type="email" id="input-email" placeholder="Email">
+                <label for="house">Casa:</label>
                 <select id="house">
                     <option id="gitnoria-house" value="Gitnória">Gitnória</option>
                     <option id="reactpuff-house" value="Reactpuff">Reactpuff</option>
                     <option id="corvinode-house" value="Corvinode">Corvinode</option>
                     <option id="pytherina-house" value="Pytherina">Pytherina</option>
                 </select>
-            </form>
-            <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
+            </div>
+            <div id="container-family-studies">
+                <div id="family">
+                    <label id="label-family">Qual sua família?</label>
+                    <label for="front">
+                        <input id="front" type="radio" name="family" value="Frontend">Família Frontend
+                    </label>
+                    <label for="back">
+                        <input id="back" type="radio" name="family" value="Backend">Família Backend
+                    </label>
+                    <label for="full">
+                        <input id="full" type="radio" name="family" value="FullStack">Família Fullstack
+                    </label>
+                </div>
+                <div id="studies">
+                    <label for="" id="label-content">Qual conteúdo você está com mais vontade de aprender?</label>
+                    <label for="hofs">
+                        <input type="checkbox" value="HoFs" id="hofs">
+                        HoFs</label>
+                    <label for="jest">
+                        <input type="checkbox" value="Jest" id="jest">
+                        Jest</label>
+                    <label for="promises">
+                        <input type="checkbox" value="Promises" id="promises">
+                        Promises</label>
+                    <label for="react">
+                        <input type="checkbox" value="React" id="react">
+                        React</label>
+                    <label for="sql">
+                        <input type="checkbox" value="SQL" id="sql">
+                        SQL</label>
+                    <label for="python">
+                        <input type="checkbox" value="Python" id="python">
+                        Python</label>
+                </div>
+            </div>
+            <div>
+
+            </div>
+        </form>
+        <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
     </main>
     <script src="script.js"></script>
 </body>
