--- a/index.html
+++ b/index.html
@@ -73,7 +73,41 @@
                 </div>
             </div>
             <div>
-
+                <label id="label-rate">Como você avalia a Trybewarts?</label>
+                <label for="ratio1">
+                    <input id="ratio1" type="radio" name="rate" value="1">1
+                </label>
+                <label for="ratio2">
+                    <input id="ratio2" type="radio" name="rate" value="2">2
+                </label>
+                <label for="ratio3">
+                    <input id="ratio3" type="radio" name="rate" value="3">3
+                </label>
+                <label for="ratio4">
+                    <input id="ratio4" type="radio" name="rate" value="4">4
+                </label>
+                <label for="ratio5">
+                    <input id="ratio5" type="radio" name="rate" value="5">5
+                </label>
+                <label for="ratio6">
+                    <input id="ratio6" type="radio" name="rate" value="6">6
+                </label>
+                <label for="ratio7">
+                    <input id="ratio7" type="radio" name="rate" value="7">7
+                </label>
+                <label for="ratio8">
+                    <input id="ratio8" type="radio" name="rate" value="8">8
+                </label>
+                <label for="ratio9">
+                    <input id="ratio9" type="radio" name="rate" value="9">9
+                </label>
+                <label for="ratio10">
+                    <input id="ratio10" type="radio" name="rate" value="10">10
+                </label>
+            </div>
+            <div class="container-textarea">
+                <label for="textarea" class="textarea">Deixe seu comentário: </label>
+                <textarea id="textarea" maxlength="500" cols="30" rows="10"></textarea>
             </div>
         </form>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
