--- a/index.html
+++ b/index.html
@@ -109,9 +109,20 @@
                 <label for="textarea" class="textarea">Deixe seu comentário: </label>
                 <textarea id="textarea" maxlength="500" cols="30" rows="10"></textarea>
             </div>
+            <div>
+
+                <label for="agreement" id="label-infos">Você concorda com o uso das informações acima?</label>
+                <input type="checkbox" id="agreement">
+            </div>
+            <div>
+                <button id="submit-btn" type="submit">Enviar</button>   
+            </div>
         </form>
         <img id="trybewarts-forms-logo" src="images/trybewarts-colored.svg" alt="">
     </main>
+    <footer>
+        Direitos reservados à Trybewarts©
+    </footer>
     <script src="script.js"></script>
 </body>
 
