--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
 <body>
     <header class="header">
-        <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="Logo Header">
+        <a href="">
+            <img class="trybewarts-header-logo" src="images/trybewarts-header-logo.svg" alt="Logo Header">
+        </a>
         <h1 id="trybewarts-header-title">Trybewarts</h1>
         <form action="" class="trybewarts-login">
             <input type="text" id="username" placeholder="Login">
